[package]
name = "game"
version = "0.1.0"
authors = ["ScipioAfricanus1 <bdharris3@uh.edu>"]
edition = "2018"

[workspace]
members = [
  "crates/*"
]


[dependencies]
bevy = "0.5.0"
bevy_rapier2d = "0.10.0"
rand = "0.8.0"
game-collisions = { path = "crates/game-collisions", version = "0.1.0" }
game-data = { path = "crates/game-data", version = "0.1.0" }
