[package]
name = "game-collisions"
version = "0.1.0"
authors = ["ScipioAfricanus1 <bdharris3@uh.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0" }
bevy_rapier2d = "0.9.0"
game-data = { path = "../game-data", version = "0.1.0" }
